--- a/survey/core/templates/core/construction_substep_form.html
+++ b/survey/core/templates/core/construction_substep_form.html
@@ -32,8 +32,24 @@
 </head>
 
 <body>
-    <div class="container">
-        <h3> Construction Sub Steps Form </h3>
+        <div class="row no-gutters">
+                <div class="col-md-12">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+        
+                            <li class="breadcrumb-item active" aria-current="page">Create Construction Substep</li>
+                        </ol>
+                    </nav>
+                </div>
+                    <div class="col-md-8 col-lg-9">
+                        <div class="dash-left">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="widget-info margin-top-large">
+                                        <div class="widget-head">
+                                            <h4><a href="#" title="">Construction Substep</a></h4>
+                                        </div>
+                                        <div class="widget-body">
         <form action="" method="post" enctype="multipart/form-data"> {% csrf_token %}
             <div>
                 {{ form.as_p }}
@@ -91,4 +107,5 @@
             <input type="submit" class="btn-primary"/>
         </form>
     </div>
+    </div></div></div></div></div></div>
 {% endblock %}
