--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -203,15 +203,13 @@
 
                                         {% endif %}
                                         <a title="View submission detail"
-                                           href="{% url 'core:report_detail' report.pk %}"><strong>{{
-                                            report.comment|truncatechars:20 }}</strong></a>
+                                           href="{% url 'core:report_detail' report.pk %}"><strong>{{report.comment|truncatechars:20 }}</strong></a>
                                         <br>
                                         <a href="#" title="View details of user">
                                             <small><i class="la la-user"></i>{{ report.user }}</small>
                                         </a>
                                         <small class="site_icon_float" style=""><i class="la la-clock-o"
-                                                                                   aria-hidden="true"></i>{{ report.date
-                                            }}
+                                                                                   aria-hidden="true"></i>{{ report.date}}
                                         </small>
                                     </li>
                                     {% empty %}
