--- a/survey/core/templates/core/configure_project_steps_form.html
+++ b/survey/core/templates/core/configure_project_steps_form.html
@@ -19,7 +19,7 @@
                                     <h4><a href="#" title="">Step</a></h4>
                                 </div>
                                 <div class="widget-body">
-                                    <form method="post">{% csrf_token %}
+                                    <form method="post" enctype="multipart/form-data">{% csrf_token %}
                                         {{ form.as_p }}
                                         <input type="submit" value="Submit">
                                     </form>
