--- a/survey/core/templates/core/configure_project_steps_form.html
+++ b/survey/core/templates/core/configure_project_steps_form.html
@@ -1,33 +1,21 @@
 {% extends '_base.html' %}
 
 {% block content %}
-<div class="row no-gutters">
-        <div class="col-md-12">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-
-                    <li class="breadcrumb-item active" aria-current="page">Create Step</li>
-                </ol>
-            </nav>
-        </div>
-            <div class="col-md-8 col-lg-9">
-                <div class="dash-left">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="widget-info margin-top-large">
-                                <div class="widget-head">
-                                    <h4><a href="#" title="">Step</a></h4>
-                                </div>
-                                <div class="widget-body">
-                                    <form method="post" enctype="multipart/form-data">{% csrf_token %}
-                                        {{ form.as_p }}
-                                        <input type="submit" value="Submit">
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+<div class="d-flex justify-content-center">
+    <div class="col-md-2 col-lg-5">
+        <div class="dash-right">
+            <div class="widget-info margin-top-large">
+                <div class="widget-head">
+                    <h4><a href="#" title="">Step</a></h4>
+                </div>
+                <div class="widget-body">
+                    <form method="post" enctype="multipart/form-data">{% csrf_token %}
+                        {{ form.as_p }}
+                        <input type="submit" value="Submit">
+                    </form>
                 </div>
             </div>
         </div>
+    </div>
+</div>
 {% endblock content %}
