--- a/survey/core/templates/core/construction_substep_form.html
+++ b/survey/core/templates/core/construction_substep_form.html
@@ -32,8 +32,10 @@
 </head>
 
 <body>
-        <div class="row no-gutters">
-                <div class="col-md-12">
+<!--         <div class="row no-gutters">
+                <div class="col-md-12"> -->
+            <div class="d-flex justify-content-center">
+                <div class="col-md-2 col-lg-5">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
         
