--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -189,7 +189,7 @@
                                         <h6>Today</h6>
                                         <ul class="update-list">
                                             
-                                            {% for log in event_logs %}
+                                            <!-- {% for log in event_logs %}
                                                 
                                                 {% if log.action == 'phoned_to' %}
                                                 <li>
@@ -218,9 +218,20 @@
                                                 {% endif %}
                                                 
                                             {% endfor %}
-                                                
+                                                 -->
                                            
-<!--                                                 
+                                             {% for log in call_logs %}
+                                                 <li>
+                                                     <img src="#" alt="">
+                                                     <a href="#" title=""><strong>{{ log.call_from }}</strong></a>
+                                                   phoned to
+                                                   <a href="#" title=""><strong>{{ log.call_to }}</strong></a>
+                                                     <span class="time"><i class="la la-clock-o"
+                                                                           aria-hidden="true"></i>{{ log.time }}</span>
+                                                 </li>
+                                             {% endfor %} 
+                                             
+                                             
                                             {% for report in recent_activities_report %}
                                                 <li>
                                                     <img src="#" alt="">
@@ -235,7 +246,7 @@
                                                     <span class="time"><i class="la la-clock-o"
                                                                           aria-hidden="true"></i>{{ report.date }}</span>
                                                 </li>
-                                            {% endfor %} -->
+                                            {% endfor %} 
 
 
 
