--- a/survey/templates/_base.html
+++ b/survey/templates/_base.html
@@ -14,6 +14,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="{% static 'assets/css/updated_style.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/updated_custom.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     {% render_bundle 'asset_stylesheets' 'css' %}
     {% render_bundle 'style' 'css' %}
