--- a/survey/core/templates/core/category_list.html
+++ b/survey/core/templates/core/category_list.html
@@ -17,7 +17,7 @@
             </nav>
         </div>
 
-        <div class="col-md-8 col-lg-9">
+<!--         <div class="col-md-8 col-lg-9">
             <div class="dash-left">
                 <div class="row">
                     <div class="col-md-6">
@@ -39,6 +39,28 @@
                                     New</a></strong>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div class="formHolder">
+        <div class="widget-info margin-top-large">
+            <div class="widget-head">
+                <div class="widget-body mt-2 horizontalForm">
+                    <div class="widget-head">
+                        <h4><a href="#" title="">Category</a></h4>
+                    </div>
+                    <div class="widget-body">
+                        {% for category in category_list %}
+                                        <a href="{% url 'core:category_update' category.pk %}"><h5>
+                                            {{ forloop.counter }}. {{ category }}</h5></a><a href="{% url 'core:category_delete' category.pk%}">Delete</a>
+                                        <br>
+                                        {% empty %}
+                                         <p>Not Categories Found.</p>
+                                    {% endfor %}
+                                    <br>
+                                    <strong><a href="{% url 'core:category_create' project.pk %}">Create New</a></strong>
                     </div>
                 </div>
             </div>
