--- a/survey/core/templates/core/checklist_form.html
+++ b/survey/core/templates/core/checklist_form.html
@@ -2,17 +2,49 @@
 
 {% block content %}
 
-<div class="d-flex justify-content-center">
+<!-- <div class="d-flex justify-content-center">
 
     <div class="col-md-2 col-lg-6">
-        <div class="dash-right"><h3 style="text-align: center">CheckList Form</h3>
-            <div class="widget-info margin-top-large">
+        <div class="dash-right"><h3 style="text-align: center">CheckList Form</h3> -->
+<!--             <div class="widget-info margin-top-large">
 
 
                 <form action="" method="post">{% csrf_token %}
                                     {{form.as_p}}
                     <input type="submit">
                 </form>
+            </div> -->
+        </div>
+    </div>
+
+    <div class="formHolder">
+        <div class="widget-info margin-top-large">
+            <div class="widget-head">
+                <div class="widget-body mt-2 horizontalForm">
+                    <div class="widget-head">
+                        <h4><a href="#" title="">CheckList Form</a></h4>
+                    </div>
+                    <form method="post">{% csrf_token %}
+                        {{form.as_p}}
+                        <!-- <div class="form-row">
+                            <div class="form-group col-md-12">
+                                <label for="inputSchoolName">Text</label>
+                                {{ form.text }}
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputSchoolName">Step</label>
+                                {{ form.step }}
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputSchoolName">Sub Step</label>
+                                {{ form.sub_step }}
+                            </div>                        
+                        </div> -->
+                        <div class="">
+                            <button type="submit" class="btn btn-success"><i class="la la-plus"></i> Submit</button>
+                        </div>                    
+                    </form>
+                </div>
             </div>
         </div>
     </div>
