--- a/survey/core/templates/core/configure_project_steps_form.html
+++ b/survey/core/templates/core/configure_project_steps_form.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 
 {% block content %}
-<div class="d-flex justify-content-center">
+<!-- <div class="d-flex justify-content-center">
     <div class="col-md-2 col-lg-5">
         <div class="dash-right">
             <div class="widget-info margin-top-large">
@@ -17,5 +17,42 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+    <div class="formHolder">
+        <div class="widget-info margin-top-large">
+            <div class="widget-head">
+                <div class="widget-body mt-2 horizontalForm">
+                    <div class="widget-head">
+                        <h4><a href="#" title="">Step</a></h4>
+                    </div>
+                    <form method="post">{% csrf_token %}
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Name</label>
+                                {{ form.name }}
+                            </div>
+                            <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Name [de]</label>
+                                {{ form.name_de }}
+                            </div>
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Image</label>
+                                {{ form.image }}
+                            </div>
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Icon</label>
+                                {{ form.icon }}
+                            </div>
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Order</label>
+                                {{ form.order }}
+                            </div>
+                        <div class="">
+                            <button type="submit" class="btn btn-success"><i class="la la-plus"></i> Submit</button>
+                         </div>                    
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
