--- a/survey/core/templates/core/construction_sitesteps_form.html
+++ b/survey/core/templates/core/construction_sitesteps_form.html
@@ -1,8 +1,8 @@
 {% extends '_base.html' %}
 
 {% block content %}
-<div class="d-flex justify-content-center">
-	<div class="col-md-2 col-lg-5">
+<div class="formHolder">
+    <div class="widget-info margin-top-large">
 		<div class="dash-right">
 			<div class="widget-info margin-top-large">
 				<form action="" method="post">{% csrf_token %}
