--- a/survey/core/templates/core/construction_substep_form.html
+++ b/survey/core/templates/core/construction_substep_form.html
@@ -32,17 +32,14 @@
 </head>
 
 <body>
-<!--         <div class="row no-gutters">
-                <div class="col-md-12"> -->
-            <div class="d-flex justify-content-center">
-                <div class="col-md-2 col-lg-5">
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-        
-                            <li class="breadcrumb-item active" aria-current="page">Create Construction Substep</li>
-                        </ol>
-                    </nav>
-                </div>
+    <div class="row no-gutters">
+        <div class="col-md-12">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item active" aria-current="page">Create Construction Substep</li>
+                </ol>
+            </nav>
+<!--                 </div>
                     <div class="col-md-8 col-lg-9">
                         <div class="dash-left">
                             <div class="row">
@@ -109,5 +106,64 @@
             <input type="submit" class="btn-primary"/>
         </form>
     </div>
-    </div></div></div></div></div></div>
+    </div></div></div></div></div></div> -->
+
+    <div class="formHolder">
+        <div class="widget-info margin-top-large">
+            <div class="widget-head">
+                <div class="widget-body mt-2 horizontalForm">
+                <div class="widget-head">
+                    <h4><a href="#" title="">Construction Substep</a></h4>
+                </div>
+                    <form action="" method="post" enctype="multipart/form-data"> {% csrf_token %}
+                        <div>
+                        {{ form.as_p }} </div>
+                        <div class="">
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Primary Photo</label>
+                            {{ primary_photo_form.management_form }}
+                            {{ primary_photo_form.non_form_errors }}
+                            {% for form in primary_photo_form %}
+                            {{ form.id }}
+                            <div class="inline {{ primary_photo_form.prefix }}">
+                                {{ form.image.errors }}
+                                {{ form.image.label_tag }}
+                                {{ form.image }}
+                            </div>
+                            {% endfor %}
+                            </div>
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Good Photo</label>
+                            {{ good_photo_form.management_form }}
+                            {{ good_photo_form.non_form_errors }}
+                            {% for form in good_photo_form %}
+                            {{ form.id }}
+                            <div class="inline {{ good_photo_form.prefix }}">
+                                {{ form.image.errors }}
+                                {{ form.image.label_tag }}
+                                {{ form.image }}
+                            </div>
+                            {% endfor %}
+                            </div>
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Bad Photo</label>
+                            {{ bad_photo_form.management_form }}
+                            {{ bad_photo_form.non_form_errors }}
+                            {% for form in bad_photo_form %}
+                            {{ form.id }}
+                            <div class="inline {{ bad_photo_form.prefix }}">
+                                {{ form.image.errors }}
+                                {{ form.image.label_tag }}
+                                {{ form.image }}
+                            </div>
+                            {% endfor %}
+                            </div>
+                        <div class="">
+                            <button type="submit" class="btn btn-success"><i class="la la-plus"></i> Submit</button>
+                         </div>                    
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
