--- a/survey/core/templates/core/project_form.html
+++ b/survey/core/templates/core/project_form.html
@@ -19,7 +19,7 @@
             </nav>
         </div>
     </div>
-
+<!-- 
         <div class="d-flex justify-content-center">
         <div class="col-md-4 col-lg-7">
             <div class="dash-right">
@@ -31,7 +31,50 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
+<div class="formHolder">
+    <div class="widget-info margin-top-large">
+        <div class="widget-head">
+            <div class="widget-body mt-2 horizontalForm">
+                <form method="post" enctype="multipart/form-data">{% csrf_token %}
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Name</label>
+                            {{ form.name }}
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Organization</label>
+                            {{ form.organization }}
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Logo</label>
+                            {{ form.logo }}
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Type</label>
+                            {{ form.type }}
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Phone Number</label>
+                            {{ form.phone_number }}
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Email Address</label>
+                            {{ form.email_address }}
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Short Description</label>
+                            {{ form.short_description }}
+                        </div>                        
+                    </div>
+                    <div class="">
+                        <button type="submit" class="btn btn-success"><i class="la la-plus"></i> Submit</button>
+                    </div>                    
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
 {% block extra_script %}
