--- a/survey/core/templates/core/sitematerials_form.html
+++ b/survey/core/templates/core/sitematerials_form.html
@@ -14,13 +14,35 @@
             <li class="breadcrumb-item active" aria-current="page">Guideline Form</li>
         </ol>
     </nav>
-    <div class="d-flex justify-content-center">
+<!--     <div class="d-flex justify-content-center">
         <div class="col-md-4 col-lg-6">
             <div class="dash-right">
                 <div class="widget-info margin-top-large">
                     <form action="" method="post">{% csrf_token %}
                         {{ form.as_p }}
                         <input type="submit" class="btn btn-primary">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div class="formHolder">
+        <div class="widget-info margin-top-large">
+            <div class="widget-head">
+                <div class="widget-body mt-2 horizontalForm">
+                    <form method="post">{% csrf_token %}
+                        <div class="">
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Site</label>
+                                {{ form.site }}
+                            </div>
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Materials</label>
+                                {{ form.materials }}
+                            </div>
+                        <div class="">
+                            <button type="submit" class="btn btn-success"></i> Submit</button>
+                         </div>                    
                     </form>
                 </div>
             </div>
