--- a/survey/core/templates/core/user_profile_detail.html
+++ b/survey/core/templates/core/user_profile_detail.html
@@ -17,7 +17,7 @@
             </ol>
         </nav>
     </div>
-    <div class="col-md-12 col-lg-12">
+<!--     <div class="col-md-12 col-lg-12">
         <div class="dash-right">
             <div class="row">
 
@@ -61,8 +61,51 @@
                 </div>
             </div>
         </div>
+    </div> -->
+
+    <div class="formHolder">
+        <div class="widget-info margin-top-large">
+            <div class="widget-head">
+                <div class="widget-body mt-2 horizontalForm">
+                    <div class="widget-head">
+                            <h4><a href="#" title="">My profile</a></h4>
+                            <a href="{% url 'core:user_profile_update' user.pk %}" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                    class="la la-plus"></i>Edit</a>
+                        </div>
+                    <form method="post">{% csrf_token %}
+                        <div class="form-row">
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Username</label>
+                                {{ user.username }}
+                            </div>
+<!--                             <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Password</label>
+                                {{ user.password1 }}
+                            </div>
+                            <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Password Confirmation</label>
+                                {{ user.password2 }}
+                            </div> -->
+                            <div class="form-group col-md-12">
+                            <label for="inputType">First Name</label>
+                                {{ user.first_name }}
+                            </div>
+                            <div class="form-group col-md-12">
+                            <label for="inputType">Last Name</label>
+                                {{ user.last_name }}
+                            </div>
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Email</label>
+                                {{ user.email }}
+                            </div>
+                        <div class="">
+                            <button type="submit" class="btn btn-success"></i> Submit</button>
+                         </div>                    
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
 
 {% endblock content %}
 {% block extra_script %}
