--- a/survey/templates/registration/signup.html
+++ b/survey/templates/registration/signup.html
@@ -17,7 +17,7 @@
             </nav>
         </div>
 
-        <div class="d-flex justify-content-center">
+<!--         <div class="d-flex justify-content-center">
         <div class="col-md-3 col-lg-6">
             <div class="dash-right">
                 <div class="widget-info margin-top-large">
@@ -28,7 +28,45 @@
                         </div>
                     </div>
                 </div>
+            </div> -->
+    <div class="formHolder">
+        <div class="widget-info margin-top-large">
+            <div class="widget-head">
+                <div class="widget-body mt-2 horizontalForm">
+                    <form method="post">{% csrf_token %}
+                        <div class="form-row">
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Username</label>
+                                {{ form.username }}
+                            </div>
+                            <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Password</label>
+                                {{ form.password1 }}
+                            </div>
+                            <div class="form-group col-md-6">
+                            <label for="inputSchoolName">Password Confirmation</label>
+                                {{ form.password2 }}
+                            </div>
+                            <div class="form-group col-md-6">
+                            <label for="inputType">First Name</label>
+                                {{ form.first_name }}
+                            </div>
+                            <div class="form-group col-md-6">
+                            <label for="inputType">Last Name</label>
+                                {{ form.last_name }}
+                            </div>
+                            <div class="form-group col-md-12">
+                            <label for="inputSchoolName">Email</label>
+                                {{ form.email }}
+                            </div>
+                        <div class="">
+                            <button type="submit" class="btn btn-success"><i class="la la-plus"></i> Submit</button>
+                         </div>                    
+                    </form>
+                </div>
             </div>
+        </div>
+    </div>
 
 {% endblock content %}
 {% block extra_script %}
