--- a/survey/core/templates/core/configure_project_steps_form.html
+++ b/survey/core/templates/core/configure_project_steps_form.html
@@ -1,6 +1,38 @@
 {% extends '_base.html' %}
 
+{% load static %}
+{% load render_bundle from webpack_loader %}
+{% load get_files from webpack_loader %}
+
+{% block extra_css %}    
+    <script src="{% static 'assets/js/vendor/jquery-1.11.2.min.js' %}"></script>
+{% endblock extra_css %}
+
 {% block content %}
+<div class="col-md-12">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">{% if request.user.is_superuser %}
+            <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">{{ project }}</a></li>
+            {% if step %}
+            <li class="breadcrumb-item"><a href="{% url 'core:construction_step_update' step.pk %}">{{ step }}</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Edit {{ step }}</li>
+            {% else %}
+            <li class="breadcrumb-item active" aria-current="page">New Step</li>
+            {% endif %}
+            {% else %}
+            <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
+            {% if step %}
+            <li class="breadcrumb-item"><a href="{% url 'core:construction_step_update' step.pk %}">{{ step }}</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Edit {{ step }}</li>
+            {% else %}
+            <li class="breadcrumb-item active" aria-current="page">New Step</li>
+            {% endif %}
+            {% endif %}
+        </ol>
+    </nav>
+</div>
+
 <!-- <div class="d-flex justify-content-center">
     <div class="col-md-2 col-lg-5">
         <div class="dash-right">
@@ -17,8 +49,8 @@
             </div>
         </div>
     </div>
-</div> -->
-    <div class="formHolder">
+</div> --> 
+   <div class="formHolder">
         <div class="widget-info margin-top-large">
             <div class="widget-head">
                 <div class="widget-body mt-2 horizontalForm">
@@ -56,3 +88,7 @@
         </div>
     </div>
 {% endblock content %}
+{% block extra_script %}
+    {% render_bundle 'site' 'js' %}
+{% endblock extra_script %}
+
