--- a/survey/core/templates/core/user_profile.html
+++ b/survey/core/templates/core/user_profile.html
@@ -17,7 +17,7 @@
             </ol>
         </nav>
     </div>
-<!--     <div class="col-md-12 col-lg-12">
+    <!-- <div class="col-md-12 col-lg-12">
         <div class="dash-right">
             <div class="row">
 
@@ -54,7 +54,8 @@
                             <a href="{% url 'core:user_profile_update' user.pk %}" title="" class="btn btn-sm btn-xs btn-primary"><i
                                     class="la la-plus"></i>Edit</a>
                         </div>
-                    <form method="post">{% csrf_token %}
+                        <h3>User {% if not object %}Add{% else %} Edit{% endif %}</h3>
+                        <form method="post">{% csrf_token %}
                         <div class="form-row">
 <!--                             <div class="form-group col-md-12">
                             <label for="inputSchoolName">Username</label>
