--- a/survey/core/templates/core/checklist_form.html
+++ b/survey/core/templates/core/checklist_form.html
@@ -25,18 +25,18 @@
         </ol>
     </nav>
 </div>
-<!-- <div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center">
 
-    <div class="col-md-2 col-lg-6">
-        <div class="dash-right"><h3 style="text-align: center">CheckList Form</h3> -->
-<!--             <div class="widget-info margin-top-large">
+    <!--<div class="col-md-2 col-lg-6">-->
+        <!--<div class="dash-right"><h3 style="text-align: center">CheckList Form</h3>-->
+            <!--<div class="widget-info margin-top-large">-->
 
 
-                <form action="" method="post">{% csrf_token %}
-                                    {{form.as_p}}
-                    <input type="submit">
-                </form>
-            </div> -->
+                <!--<form action="" method="post">{% csrf_token %}-->
+                                    <!--{{form.as_p}}-->
+                    <!--<input type="submit">-->
+                <!--</form>-->
+            <!--</div>-->
         <!--</div>-->
     <!--</div>-->
 
@@ -49,23 +49,27 @@
                     </div>
                     <form method="post">{% csrf_token %}
                         {{form.as_p}}
-                        <!-- <div class="form-row">
-                            <div class="form-group col-md-12">
-                                <label for="inputSchoolName">Text</label>
-                                {{ form.text }}
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputSchoolName">Step</label>
-                                {{ form.step }}
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputSchoolName">Sub Step</label>
-                                {{ form.sub_step }}
-                            </div>                        
-                        </div> -->
+                        <!--<div class="form-row">-->
+                            <!--<div class="form-group col-md-12">-->
+                                <!--<label for="inputSchoolName">Text</label>-->
+                                <!--{{ form.text }}-->
+                            <!--</div>-->
+                            <!--<div class="form-group col-md-12">-->
+                                <!--<label for="inputSchoolName">Description</label>-->
+                                <!--{{ form.text }}-->
+                            <!--</div>-->
+                            <!--<div class="form-group col-md-6">-->
+                                <!--<label for="inputSchoolName">Step</label>-->
+                                <!--{{ form.step }}-->
+                            <!--</div>-->
+                            <!--<div class="form-group col-md-6">-->
+                                <!--<label for="inputSchoolName">Sub Step</label>-->
+                                <!--{{ form.sub_step }}-->
+                            <!--</div>-->
+                        </div>
                         <div class="">
                             <button type="submit" class="btn btn-success"><i class="la la-plus"></i> Submit</button>
-                        </div>                    
+                        </div>
                     </form>
                 </div>
             </div>
