manage templates design

--- a/survey/core/templates/core/configure_project_steps_form.html
+++ b/survey/core/templates/core/configure_project_steps_form.html
@@ -80,6 +80,7 @@
                             <label for="inputSchoolName">Icon</label>
                                 {{ form.icon }}
                             </div>
+                        </div>
                         <div class="">
                             <button type="submit" class="btn btn-success"><i class="la la-plus"></i> Submit</button>
                          </div>
