--- a/survey/userrole/templates/userrole/send_email_invitation.html
+++ b/survey/userrole/templates/userrole/send_email_invitation.html
@@ -20,15 +20,37 @@
                 </ol>
             </nav>
         </div>
-        <div class="col-md-2">
-            <h6><strong>Send Invitation To:</strong></h6><br>
-            <form method="post">{% csrf_token %}
-                {{ form }}
-                {% if data %}
-                {{ data }}<br>
-                {% endif %}
-                <br><input type="submit" value="Send" class="btn btn-sm btn-primary">
-            </form>
-        </div>
+        <!--<div class="col-md-2">-->
+            <!--<h6><strong>Send Invitation To:</strong></h6><br>-->
+            <!--<form method="post">{% csrf_token %}-->
+                <!--{{ form }}-->
+                <!--{% if data %}-->
+                <!--{{ data }}<br>-->
+                <!--{% endif %}-->
+                <!--<br><input type="submit" value="Send" class="btn btn-sm btn-primary">-->
+            <!--</form>-->
+        <!--</div>-->
+       <div class="formHolder">
+            <div class="widget-info margin-top-large">
+                <div class="widget-head">
+                    <div class="widget-body mt-2 horizontalForm">
+                        <div class="widget-head">
+                            <h4><a href="#" title="">Send Invitation To:</a></h4>
+                        </div>
+                        <form method="post">{% csrf_token %}
+                            <div class="form-row">
+                                {{ form }}
+                                {% if data %}
+                                {{ data }}<br>
+                                {% endif %}<br>
+                            </div>
+                            <div class=""><br>
+                                <button type="submit" class="btn btn-success"></i> Send</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+       </div>
     </div>
 {% endblock content %}
